--- a/src/index.css
+++ b/src/index.css
@@ -147,7 +147,7 @@
   }
 
   html {
-    @apply scrollbar-thin scrollbar-thumb-ring scrollbar-track-background;
+    @apply scrollbar-thin scrollbar-thumb-ring scrollbar-track-background overflow-y-scroll;
   }
 
   body {
